# saasclaw-engine

./: .gitignore  .pre-commit-config.yaml  README.md  REFACTOR_PLAN.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  tests.yml
docs/: ARCHITECTURE.md  NIST-AI-RMF.md  PII-PROTECTION.md  PROJECT-APPROVAL.md  TESTING.md  WIZARD-GATEWAY.md
extensions/: pii-guard.ts
saasclaw_engine/: help_search.py  test_settings.py
saasclaw_engine/agent/: activity.py  context_scan.py  llm_backends.py  pi_bridge.py  pii_guard.py  prompt_guard.py  prompt_utils.py  runner.py  tool_subtasks.py  tools.py  wizard_documents.py
saasclaw_engine/agent/tests/: test_imports.py  test_pi_bridge.py  test_saasclaw_config.py
saasclaw_engine/agents/: models.py  tasks.py  tests.py
saasclaw_engine/deployments/: deploy_android.py  deploy_django.py  deploy_dotnet.py  deploy_infra.py  deploy_java.py  deploy_node.py  deploy_static.py  models.py  semgrep_rules.yml  service.py  smoke_tests.py  tests.py
saasclaw_engine/deployments/migrations/: 0010_alter_customdomain_options.py  0011_add_java_runtime_kind.py  0012_alter_environment_runtime_kind.py
saasclaw_engine/deployments/tests/: test_imports.py  test_module_integrity.py  test_nginx_config.py  test_phase_tracking.py  test_pipeline.py  test_service.py  test_smoke.py  test_utils.py
saasclaw_engine/integrations/: apps.py  db_console.py  figma.py  forms.py  forms_api.py  github.py  models.py  penpot.py  penpot_views.py  signals.py  tests.py  urls.py  views.py
saasclaw_engine/integrations/migrations/: 0002_githubinstallation_repository_selection_and_more.py  0003_figma_connection.py  0004_penpot_connection.py
saasclaw_engine/integrations/tests/: test_db_console.py  test_forms_api.py
saasclaw_engine/projects/: admin.py  models.py
saasclaw_engine/projects/migrations/: 0027_project_require_gateway.py  0029_project_risk_tier_and_more.py  0030_formsubmission.py  0031_project_form_api_key.py  0032_project_soft_delete.py  0033_formsubmission_environment.py  0034_add_show_as_demo.py  0035_add_openclaw_fields.py  0036_company_directory_enabled.py  0037_remove_use_openclaw_agent.py  0038_add_firebase_framework.py  0039_project_linked_project_project_linked_project_role.py  0040_project_category.py
saasclaw_engine/projects/tests/: test_gateway.py  test_soft_delete.py  test_submissions.py
saasclaw_engine/public_api/: __init__.py  api_key_urls.py  api_key_views.py  apps.py  authentication.py  models.py  oidc_provider.py  permissions.py  serializers.py  urls.py  views.py
saasclaw_engine/public_api/migrations/: 0001_initial.py
saasclaw_engine/studio_models/: admin.py  models.py  tests.py
saasclaw_engine/studio_models/migrations/: 0001_initial.py  0002_sitesettings.py  0003_custompiipattern.py  0004_sitesettings_require_training_before_project_and_more.py  0005_sitesettings_custom_domains_enabled_and_more.py  0006_add_openclaw_fields.py  0007_sitesettings_openclaw_wizard_enabled.py  0008_sitesettings_wizard_web_search_enabled.py  0009_providerkey_is_platform.py  0010_sitesettings_allow_personal_keys.py  0011_sitesettings_semgrep_scan_enabled.py  0012_figma_enabled.py  0013_penpot_enabled.py
saasclaw_engine/tax_data/: apps.py  models.py  models_pa.py  serializers.py  serializers_pa.py  urls.py  views.py  views_calculate.py  views_pa.py
saasclaw_engine/tax_data/management/commands/: add_tax_year.py  import_pa_tax_codes.py  import_tax_data.py
saasclaw_engine/tax_data/migrations/: 0001_initial.py  0002_statetaxprofile_default_allowances_hoh_and_more.py  0003_statetaxprofile_allowance_includes_standard_deduction.py  0004_add_source_urls.py  0005_add_state_source_urls.py  0006_statetaxprofile_agency_email_and_more.py  0007_localtaxbracket_localtaxinfo.py  0008_localtaxbracket_fk_change.py  0009_pataxcode.py
saasclaw_engine/tests/: test_staging_integration.py
sandbox/: Dockerfile
