[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saasclaw-engine"
version = "0.1.0"
description = "AI-powered app build, deploy, and agent engine for SaaSClaw"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "httpx>=0.25",
    "requests>=2.28",
    "PyJWT>=2.8",
    "sunglasses>=0.2",
]

authors = [{name = "Norman Moore", email = "normandmickey@gmail.com"}]
keywords = ["ai", "agent", "deploy", "saasclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
pii-guard = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7", "fastapi>=0.100", "uvicorn>=0.23"]
vector-store = ["chromadb>=0.4"]
task-queue = ["celery[redis]>=5.3", "playwright>=1.40"]
dev = [
    "pytest",
    "pytest-django",
    "pytest-timeout",
]

[project.urls]
Homepage = "https://saasclaw.ai"
Repository = "https://github.com/normandmickey/saasclaw-engine"
Issues = "https://github.com/normandmickey/saasclaw-engine/issues"

[project.scripts]
pii-guard-service = "saasclaw_engine.pii_guard_service.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["saasclaw_engine*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "saasclaw_engine.test_settings"
python_files = ["test_*.py"]
testpaths = ["saasclaw_engine"]
addopts = "-v --override-ini=filterwarnings=ignore::DeprecationWarning"
markers = [
    "django_db: marks tests that need database access",
]
